[package]
name = "rust_investor_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = "0.26.0"
csv = "1.1.6"
dotenv = "0.15.0"
flexi_logger = "0.24.2"
futures = "0.3.25"
log = "0.4.17"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip", "deflate", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.24.1", features = ["full"] }
